--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - LANGFLOW_CONFIG_DIR=app/langflow
     volumes:
       - langflow-data:/app/langflow
+      - ./requirements.txt:/app/requirements.txt
+    entrypoint: >
+      sh -c "
+      pip install --no-cache-dir -r /app/requirements.txt &&
+      exec python -m langflow run --host 0.0.0.0 --port 7860
+      "
 
   postgres:
     image: postgres:16
