--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -2,14 +2,15 @@ version: "3.8"
 
 services:
   langflow:
-    image: langflowai/langflow:1.0-alpha
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "7860:7860"
     depends_on:
       - postgres
     environment:
       - LANGFLOW_DATABASE_URL=postgresql://langflow:langflow@postgres:5432/langflow
-      # This variable defines where the logs, file storage, monitor data and secret keys are stored.
       - LANGFLOW_CONFIG_DIR=app/langflow
     volumes:
       - langflow-data:/app/langflow
